WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259677
[ WK2 macOS ] http/wpt/cache-storage/cache-quota-after-restart.any.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=259677
Summary
[ WK2 macOS ] http/wpt/cache-storage/cache-quota-after-restart.any.html is a ...
Ben Schwartz
Reported
2023-07-31 23:44:12 PDT
http/wpt/cache-storage/cache-quota-after-restart.any.html This test is a flaky failure on macOS and iOS, constant failure on x86 (GTK/WPE/Wayland). HISTORY:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fcache-storage%2Fcache-quota-after-restart.any.html
TEXT DIFF: -CONSOLE MESSAGE: Cache API operation failed: Quota exceeded CONSOLE MESSAGE: Cache API operation failed: Quota exceeded PASS Increasing quota PASS After network process restart, verify quota is computed according space being used -PASS After network process restart, verify quota is computed according space being used and does not increase +FAIL After network process restart, verify quota is computed according space being used and does not increase assert_unreached: Should have rejected: put should fail Reached unreachable code DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Release-AppleSilicon-WK2-Tests/266464%40main%20(4230)/http/wpt/cache-storage/cache-quota-after-restart.any-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this bug on macOS Ventura ToT running the test as follows: run-webkit-tests --iterations 500 --verbose http/wpt/cache-storage/cache-quota-after-restart.any.html REGRESSION: This test has been a flaky/constant failure on the reported platforms as far back in history as the flakiness dashboard extends. From a previous bug report (
bug #196197
), I was able to identify a potential regression point at the time of test introduction at
210340@main
. It is unclear as to whether this included the flaky failures on WK2 or just the reported constant GTK/WPE failures.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-31 23:44:24 PDT
<
rdar://problem/113189461
>
Ben Schwartz
Comment 2
2023-07-31 23:54:02 PDT
I have marked this test as a flaky failure on macOS-wk2 (updated existing test expectation, only one that needed updating) while this issue is investigated. (PR link:
https://github.com/WebKit/WebKit/pull/16269
)
EWS
Comment 3
2023-08-01 09:19:38 PDT
Test gardening commit
266478@main
(76ed648226ad): <
https://commits.webkit.org/266478@main
> Reviewed commits have been landed. Closing PR #16269 and removing active labels.
Adrian Perez
Comment 4
2023-08-01 13:39:39 PDT
***
Bug 196197
has been marked as a duplicate of this bug. ***
Sihui Liu
Comment 5
2023-09-06 17:28:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17519
EWS
Comment 6
2023-09-07 14:02:14 PDT
Committed
267748@main
(24e3d351a100): <
https://commits.webkit.org/267748@main
> Reviewed commits have been landed. Closing PR #17519 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug